syntax = "proto3";

package groverudp.v1;
option go_package = "github.com/jgoldverg/grover/pkg/groverpb/groverudpv1;groverudpv1";

service GroverServer {
  rpc StartServer (StartServerRequest) returns (StartServerResponse);
  rpc StopServer  (StopServerRequest)  returns (StopServerResponse);
  rpc ListPorts (ListPortRequest) returns (ListPortResponse);
  rpc DeleteUdpPorts (DeleteUdpPortsRequest) returns (DeleteUdpPortsResponse);
  rpc CreateUdpPorts (CreateUdpPortsRequest) returns (CreateUdpPortsResponse);
}

service TransferService {
  rpc LaunchFileTransfer(FileTransferRequest) returns (FileTransferResponse);
}

enum OverwritePolicy {
  OVERWRITE_UNSPECIFIED = 0;
  OVERWRITE_ALWAYS = 1;
  OVERWRITE_IF_NEWER = 2;
  OVERWRITE_NEVER = 3;
  OVERWRITE_IF_DIFFERENT = 4;
}

message FsEntry {
  string path = 1;
}

enum ChecksumType {
  CHECKSUM_NONE = 0;
  CHECKSUM_MD5 = 1;
  CHECKSUM_SHA256 = 2;
  CHECKSUM_XXH3 = 3;
}

// Transfer tuning knobs
message FileTransferParams {
  uint32 concurrency = 1;
  uint32 parallelism = 2;
  uint32 pipelining = 3;
  uint64 chunk_size = 4;
  uint32 rate_limit_mbps = 5;

  OverwritePolicy overwrite = 6;
  ChecksumType checksum_type = 7;
  bool verify_checksum = 8;

  uint32 max_retries = 9;
  uint32 retry_backoff_ms = 10;
}

message Endpoint {
  string raw = 1;
  string scheme = 2;
  repeated string paths = 3;
  string credential_hint = 4;
  string credential_id = 5;
}

message TransferEdgeOption {
  string key = 1;
  string value = 2;
}

message TransferEdge {
  uint32 source_index = 1;
  uint32 dest_index = 2;
  string source_path = 3;
  string dest_path = 4;
  repeated TransferEdgeOption options = 5;
}

// Request
message FileTransferRequest {
  repeated Endpoint sources = 1;
  repeated Endpoint destinations = 2;
  repeated TransferEdge edges = 3;
  FileTransferParams params = 4;
  string idempotency_key = 5;
  bool delete_source = 6;
}

// Response
message FileTransferResponse {
  string transfer_id = 1; // server-generated ID
  bool accepted = 2;
  int32 udpPort = 3;
  string message = 4;
  bytes session_token = 5;
}



message CreateUdpPortsRequest {
  uint32 port_count = 1;
}

message CreateUdpPortsResponse {
  repeated uint32 ports = 1;
}

message DeleteUdpPortsRequest {
  repeated uint32 port_num = 1;
}

message DeleteUdpPortsResponse {
  bool ok = 1;
}

message ListPortRequest {}

message ListPortResponse {
  repeated uint32 port = 1;
}

message StartServerRequest {
  uint32 udp_port = 1;
  uint32 workers_per_file = 2;
  uint32 max_transfers = 3;
}

message StartServerResponse {
  bool   ok = 1;
  uint32 port = 2;
  string message = 3;
}

message StopServerRequest {}
message StopServerResponse {
  bool   ok = 1;
  string message = 2;
}
